moved the html file in a folder

--- a/semiuscrumy/templates/semiuscrumy/home.html
+++ b/semiuscrumy/templates/semiuscrumy/home.html
@@ -16,5 +16,5 @@
     {% endfor %}
 </table>
 {% else %}
-<p>No records found in the dictionary</p>
+<p {{ goal_name }}>No records found in the dictionary</p>
 {% endif %}
