--- a/semiuscrumy/templates/semiuscrumy/home.html
+++ b/semiuscrumy/templates/semiuscrumy/home.html
@@ -1,20 +1,43 @@
-{% if dic_values %}
-<table>
-    <th>User</th>
-    <th>Weekly Goals</th>
-    <th>Daily Goals</th>
-    <th>Verify Goals</th>
-    <th>Done Goals</th>
-    {% for goals in dic_values %}
-    <tr>
-        <td>{{ goals.user }}</td>
-        <td>{{ goals.goal_name }} {{ goals.goal_id }}</td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    {% endfor %}
-</table>
-{% else %}
-<p {{ goal_name }}>No records found in the dictionary</p>
-{% endif %}
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        {% if dictionary %}
+        <table>
+            <th>User</th>
+            <th>Weekly Goals</th>
+            <th>Daily Goals</th>
+            <th>Verify Goals</th>
+            <th>Done Goals</th>
+            {% for goals in dic_values %}
+            <tr>
+                <td>{{ goals.user }}</td>
+                <td>{{ goals.goal_name }} {{ goals.goal_id }}</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            {% endfor %}-->
+        </table>
+        {% else %}
+        </p>{{ user }} No records found in the dictionary</p>
+        {% endif %}
+        
+        <script src="" async defer></script>
+    </body>
+</html>
