added related manager to the view

--- a/semiuscrumy/templates/semiuscrumy/home.html
+++ b/semiuscrumy/templates/semiuscrumy/home.html
@@ -18,13 +18,15 @@
             <th>Verify Goals</th>
             <th>Done Goals</th>
         </tr>
+
         <tr>
-            <td>{{ user }}</td>
-            <td>{{ goal_name }} | {{ goal_id}}</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>{{ users }}</td>
+            <td>{{ weeklygoal }}</td>
+            <td>{{ dailygoal }}</td>
+            <td>{{ verifygoal }}</td>
+            <td>{{ donegoal }}</td>
         </tr>
+
         <!--{% for goals in dic_values %}-->
         <!--{% endfor %}-->
     </table>
