added login features lab 17 solutions

--- a/semiuscrumy/templates/semiuscrumy/home.html
+++ b/semiuscrumy/templates/semiuscrumy/home.html
@@ -22,7 +22,7 @@
                 <th style="border: 1px solid">Verify Goals</th>
                 <th style="border: 1px solid">Done Goals</th>
             </tr>
-            <!-- Start of Lab 14 -->
+            <!-- Lab 14 starts here
             <tr style="border: 1px solid">
                 <td style="border: 1px solid">{{ user }}</td>
                 <td style="border: 1px solid">{{goal_name}} | {{ goal_id }}</td>
@@ -30,8 +30,8 @@
                 <td style="border: 1px solid"></td>
                 <td style="border: 1px solid"></td>
             </tr>
-            <!--End of Lab 14-->
-            <!--
+            End of Lab 14-->
+            <!--Lab 16 Starts here-->
             {% if context != '' %}
             <tr style="border: 1px solid">
                 <td style="border: 1px solid">{{ users }}</td>
@@ -40,7 +40,7 @@
                 <td style="border: 1px solid">{{ verifygoal }}</td>
                 <td style="border: 1px solid">{{ donegoal }}</td>
             </tr>
-            {% endif %} -->
+            {% endif %}
             <!--{% for goals in dic_values %}-->
             <!--{% endfor %}-->
         </table>
