modified lab 15 to inclide goal name in the try block

--- a/django-semiuscrumy1/semiuscrumy/templates/registration/login.html
+++ b/django-semiuscrumy1/semiuscrumy/templates/registration/login.html
@@ -172,7 +172,7 @@
         <hr>
         <p>{{ loginerror }}</p>
         {% endif %}
-        <form action="" method="POST">
+        <form action="{% url 'index' %}" method="POST">
             {% csrf_token %}
             
             <!--<hr>
