--- a/semiuscrumy/templates/semiuscrumy/index.html
+++ b/semiuscrumy/templates/semiuscrumy/index.html
@@ -1,4 +1,3 @@
-
 <head>
     <title>Semiu Scrumy Application</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
@@ -163,45 +162,22 @@
     <!-- Lab 17 starts here -->
     <a href="{% url 'index' %}"><b> Home Page</b></a>
     <!-- ends here -->
-    
+
     <!-- Lab 18 starts here -->
 
     <div class="main-block">
-        <h1>User Login</h1>
-        {% if loginerror %}
-        <hr>
-        <p>{{ loginerror }}</p>
-        {% endif %}
+        <h1>Create New User</h1>
+        
         <form action="" method="POST">
             {% csrf_token %}
-            
-            <!--<hr>
-            <div class="account-type">
-                <input type="radio" value="none" id="radioOne" name="account" checked />
-                <label for="radioOne" class="radio">Personal</label>
-                <input type="radio" value="none" id="radioTwo" name="account" />
-                <label for="radioTwo" class="radio">Company</label>
-            </div>-->
-            <hr>
-            <label id="icon" for="username"><i class="fas fa-envelope"></i></label>
-            <input type="text" name="username" id="name" placeholder="Username" required />
-            <label id="icon" for="password"><i class="fas fa-user"></i></label>
-            <input type="text" name="password" id="password" placeholder="Password" required />
 
-            <hr>
-            <!--<div class="gender">
-                <input type="radio" value="none" id="male" name="gender" checked />
-                <label for="male" class="radio">Male</label>
-                <input type="radio" value="none" id="female" name="gender" />
-                <label for="female" class="radio">Female</label>
-            </div>
-            <hr> -->
+            {{form}}
 
             <button type="submit">Submit</button>
-        <!-- Lab 18 ends here -->
+            <!-- Lab 18 ends here -->
         </form>
     </div>
-    
+
     </div>
 </body>
 
