added chat app to the project and ability to move goal around

--- a/semiuscrumy/templates/registration/login.html
+++ b/semiuscrumy/templates/registration/login.html
@@ -1,9 +1,7 @@
-
 <head>
     <title>Semiu Scrumy Application</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-        integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <style>
         html,
         body {
@@ -11,7 +9,7 @@
             justify-content: center;
             height: 100%;
         }
-
+        
         body,
         div,
         h1,
@@ -25,23 +23,23 @@
             font-size: 16px;
             color: #666;
         }
-
+        
         h1 {
             padding: 10px 0;
             font-size: 32px;
             font-weight: 300;
             text-align: center;
         }
-
+        
         p {
             font-size: 12px;
         }
-
+        
         hr {
             color: #a9a9a9;
             opacity: 0.3;
         }
-
+        
         .main-block {
             max-width: 340px;
             min-height: 280px;
@@ -52,25 +50,25 @@
             box-shadow: 1px 2px 5px rgba(0, 0, 0, .31);
             background: #ebebeb;
         }
-
+        
         form {
             margin: 0 30px;
         }
-
+        
         .account-type,
         .gender {
             margin: 15px 0;
         }
-
+        
         input[type=radio] {
             display: none;
         }
-
+        
         label#icon {
             margin: 0;
             border-radius: 5px 0 0 5px;
         }
-
+        
         label.radio {
             position: relative;
             display: inline-block;
@@ -80,7 +78,7 @@
             overflow: visible;
             cursor: pointer;
         }
-
+        
         label.radio:before {
             content: "";
             position: absolute;
@@ -91,7 +89,7 @@
             border-radius: 50%;
             background: #1c87c9;
         }
-
+        
         label.radio:after {
             content: "";
             position: absolute;
@@ -105,11 +103,11 @@
             transform: rotate(-45deg);
             opacity: 0;
         }
-
+        
         input[type=radio]:checked+label:after {
             opacity: 1;
         }
-
+        
         input[type=text],
         input[type=password] {
             width: calc(100% - 57px);
@@ -121,11 +119,11 @@
             box-shadow: 1px 2px 5px rgba(0, 0, 0, .09);
             background: #fff;
         }
-
+        
         input[type=password] {
             margin-bottom: 15px;
         }
-
+        
         #icon {
             display: inline-block;
             padding: 9.3px 15px;
@@ -134,12 +132,12 @@
             color: #fff;
             text-align: center;
         }
-
+        
         .btn-block {
             margin-top: 10px;
             text-align: center;
         }
-
+        
         button {
             width: 100%;
             padding: 10px 0;
@@ -151,7 +149,7 @@
             font-weight: 600;
             color: #fff;
         }
-
+        
         button:hover {
             background: #26a9e0;
         }
@@ -161,47 +159,34 @@
 <body>
 
     <!-- Lab 17 starts here -->
-    <a href="{% url 'index' %}"><b> Home Page</b></a>
+    <a href="{% url 'semiuscrumy:index' %}"><b> About Us</b></a>
     <!-- ends here -->
-    
+
     <!-- Lab 18 starts here -->
 
     <div class="main-block">
         <h1>User Login</h1>
-        {% if loginerror %}
-        <hr>
-        <p>{{ loginerror }}</p>
+        {% if form.errors %}
+        <p><b>invalid login credentials</b></p>
         {% endif %}
+        <hr>
         <form action="" method="POST">
             {% csrf_token %}
-            
-            <!--<hr>
-            <div class="account-type">
-                <input type="radio" value="none" id="radioOne" name="account" checked />
-                <label for="radioOne" class="radio">Personal</label>
-                <input type="radio" value="none" id="radioTwo" name="account" />
-                <label for="radioTwo" class="radio">Company</label>
-            </div>-->
+
             <hr>
             <label id="icon" for="username"><i class="fas fa-envelope"></i></label>
             <input type="text" name="username" id="name" placeholder="Username" required />
             <label id="icon" for="password"><i class="fas fa-user"></i></label>
-            <input type="text" name="password" id="password" placeholder="Password" required />
+            <input type="password" name="password" id="password" placeholder="Password" required />
 
             <hr>
-            <!--<div class="gender">
-                <input type="radio" value="none" id="male" name="gender" checked />
-                <label for="male" class="radio">Male</label>
-                <input type="radio" value="none" id="female" name="gender" />
-                <label for="female" class="radio">Female</label>
-            </div>
-            <hr> -->
+
 
             <button type="submit">Submit</button>
-        <!-- Lab 18 ends here -->
+            <!-- Lab 18 ends here -->
         </form>
     </div>
-    
+
     </div>
 </body>
 
