--- a/semiuscrumy/templates/semiuscrumy/addgoal.html
+++ b/semiuscrumy/templates/semiuscrumy/addgoal.html
@@ -17,7 +17,7 @@
         <!-- Lab 18 starts here -->
 
         <div class="main-block">
-            <h1>Create New User</h1>
+            <h1>Add A New Goal</h1>
 
             <form action="" method="POST">
                 {% csrf_token %} {{form}}
@@ -26,6 +26,7 @@
                 <!-- Lab 18 ends here -->
             </form>
         </div>
+
     </div>
     <table>
 </body>
